Fix container going off-screen on 404

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -36,6 +36,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* @wustep fix container going off screen on small heights */
+  margin-top: auto;
+  margin-bottom: auto;
+  /* @wustep end */
 }
 
 .errorImage {
